--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,4 +8,13 @@
     android:layout_height="wrap_content"
     android:elevation="2dp"
     android:theme="@style/Theme.Toolbar"
-    app:titleTextAppearance="@style/Theme.Toolbar.Title" />
+    app:titleTextAppearance="@style/Theme.Toolbar.Title">
+
+    <Spinner
+        android:id="@+id/spinner_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:prompt="@string/sort"
+        android:entries="@array/sortItems"/>
+
+</android.support.v7.widget.Toolbar>
