--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,12 @@
         android:id="@+id/gridMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="2"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
         android:stretchMode="columnWidth"
+        android:columnWidth="130dp"
+        android:gravity="center"
+        android:numColumns="auto_fit"
         android:layout_below="@+id/toolbar"/>
 
 </RelativeLayout>
