--- a/app/src/main/res/layout/image_movie.xml
+++ b/app/src/main/res/layout/image_movie.xml
@@ -3,6 +3,6 @@
     android:id="@+id/picture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="center">
+    android:adjustViewBounds="true">
 
 </ImageView>
