--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -7,4 +7,89 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
+    <ImageView
+        android:id="@+id/backdropView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@android:color/black"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/toolbar"/>
+
+    <ImageView
+        android:id="@+id/posterView"
+        android:layout_width="120dp"
+        android:layout_height="165dp"
+        android:padding="6dp"
+        android:layout_marginTop="130dp"
+        android:background="@android:color/white"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"/>
+
+    <TextView
+        android:id="@+id/titleView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Movie Title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:textSize="26sp"
+        android:layout_below="@+id/backdropView"
+        android:layout_toEndOf="@+id/posterView"
+        android:layout_toRightOf="@id/posterView"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/releasedView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="2015"
+        android:textSize="18sp"
+        android:layout_below="@+id/titleView"
+        android:layout_alignStart="@+id/titleView"
+        android:layout_alignLeft="@id/titleView"/>
+
+    <ImageView
+        android:id="@+id/starView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/star"
+        android:layout_alignStart="@+id/titleView"
+        android:layout_alignLeft="@id/titleView"
+        android:layout_below="@id/releasedView"/>
+
+    <TextView
+        android:id="@+id/starText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="9"
+        android:textStyle="bold"
+        android:layout_toEndOf="@+id/posterView"
+        android:layout_toRightOf="@id/posterView"
+        android:layout_alignLeft="@+id/starView"
+        android:layout_alignStart="@id/starView"
+        android:layout_alignBottom="@+id/starView"
+        android:layout_alignRight="@+id/starView"
+        android:layout_alignEnd="@id/starView"
+        android:layout_alignTop="@+id/starView"
+        android:textSize="14sp"
+        android:gravity="center"/>
+
+    <TextView
+        android:id="@+id/overviewView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:layout_below="@+id/posterView"
+        android:layout_alignStart="@+id/posterView"
+        android:layout_alignLeft="@id/posterView"
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
+        android:textSize="18sp"
+        android:paddingBottom="20dp"/>
+
 </RelativeLayout>
