--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -38,6 +38,17 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginStart="20dp"/>
 
+            <ImageView
+                android:id="@+id/imgFavorite"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/favorite"
+                android:layout_marginTop="150dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
+
             <TextView
                 android:id="@+id/titleView"
                 android:layout_width="wrap_content"
