It was added the Favorite at the Settings, where it was implemented the SQLite to store the favorite movies Besides, the class AndroidDatabaseManager was added in order to see the databases of the SQLite and manage them (like PHPMyAdmin)

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -60,4 +60,26 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearFavorite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:paddingLeft="20dp"
+        android:orientation="horizontal"
+        android:layout_below="@+id/linearHighestRated">
+
+        <RadioButton
+            android:id="@+id/radioFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/abc_btn_radio_material"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favorite"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
