--- a/app/src/main/res/menu/menu_movie_details.xml
+++ b/app/src/main/res/menu/menu_movie_details.xml
@@ -4,4 +4,11 @@
     tools:context="com.movies.bruno.udacity.popularmovies.MovieDetailsActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_share"
+        app:showAsAction="ifRoom"
+        android:title="Share"
+        android:actionProviderClass=
+            "android.widget.ShareActionProvider" />
 </menu>
